# nanonis_tcp_test

./: .gitignore  CLAUDE.md  Untitled.ipynb  debug_signal_values.py  debug_signals.py  example_integrated_usage.py  flake.nix  get_signal_names.py  main.py  mat_export.py  nanonis_client.py  nix_setup.sh  on_machine_testing.py  pulse_test.py  pyproject.toml  scan_test.py  signal_log.txt  signal_reader.py  tcpprotocol.typ  tip_prep_test.py  windows-11.conf
.virtual_documents/: Untitled.ipynb
examples/: adaptive_control.py  debug_signal_values.py  example_integrated_usage.py  scan_test.py  tip_prep_test.py
nanonis_control/: __init__.py  connection.py  controller.py  monitoring.py
