[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanonis-control"
version = "0.1.0"
description = "High-level Python library for controlling Nanonis SPM software via TCP"
readme = "CLAUDE.md"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "nanonis-spm>=1.0.8",
    "matplotlib>=3.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[project.scripts]
nanonis-control = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["nanonis_control"]